Implement asynchronous I/O operations in AbstractGsonRepository and introduce BatchCallback for batch processing